Fixed hero image layout shift.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,11 +95,6 @@ body {
     flex-direction: column;
     margin-top: 70px;
   }
-  #image-hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-  } 
   @media (max-width:768px) {
     .image-hero {
       flex-direction: column;
